--- a/src/view/MenuPrincipale.fxml
+++ b/src/view/MenuPrincipale.fxml
@@ -9,12 +9,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <SplitPane dividerPositions="0.40257879656160456" layoutX="213.0" layoutY="141.0" prefHeight="500.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+         <items>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <Pane layoutX="-13.0" layoutY="130.0" prefHeight="498.0" prefWidth="205.0" style="-fx-background-color: #1B6CD7;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -47,55 +46,30 @@
                   </Pane>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <Pane layoutX="107.0" layoutY="40.0" prefHeight="498.0" prefWidth="414.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Label layoutX="74.0" layoutY="27.0" text="Emittente TV" textFill="#1b6cd7">
+                        <Label layoutX="16.0" layoutY="30.0" text="MENU' PRINCIPALE" textFill="#1b6cd7">
                            <font>
-                              <Font name="Times New Roman Bold Italic" size="48.0" />
+                              <Font name="Times New Roman Bold Italic" size="40.0" />
                            </font>
                         </Label>
-                        <ImageView fitHeight="39.0" fitWidth="236.0" layoutX="221.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../res/LogoMediaset.png" />
-                           </image>
-                        </ImageView>
-                        <Label layoutX="14.0" layoutY="236.0" text="Le principali funzionalità sono:" textFill="#1b6cd7">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="14.0" layoutY="273.0" text="-" textFill="#1b6cd7">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="14.0" layoutY="300.0" text="-" textFill="#1b6cd7">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="14.0" layoutY="327.0" text="-" textFill="#1b6cd7">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                        </Label>
-                        <Button layoutX="112.0" layoutY="434.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="190.0" style="-fx-background-color: #1b6cd7; -fx-background-radius: 5em;" text="Procedere con il Programma" textFill="WHITE">
+                        <Button layoutX="102.0" layoutY="134.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="211.0" style="-fx-background-color: #1b6cd7; -fx-background-radius: 5em;" text="Gestione del contenuto" textFill="WHITE">
                            <font>
                               <Font size="13.0" />
                            </font>
                         </Button>
-                        <ImageView fitHeight="94.0" fitWidth="248.0" layoutX="14.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../res/UniBoLogo.png" />
-                           </image>
-                        </ImageView>
+                        <Button layoutX="102.0" layoutY="280.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="211.0" style="-fx-border-radius: 5em; -fx-border-color: #1b6cd7; -fx-background-color: #FFFFFF; -fx-border-width: 3;" text="Visualizzazione di Informazioni" textFill="#1b6cd7">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Button>
                      </children>
                   </Pane>
                </children>
             </AnchorPane>
-        </items>
+         </items>
       </SplitPane>
    </children>
 </AnchorPane>
