--- a/src/view/Canali.fxml
+++ b/src/view/Canali.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="365.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="365.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView layoutX="14.0" layoutY="55.0" prefHeight="200.0" prefWidth="466.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="60.0">
         <columns>
@@ -19,7 +18,7 @@
             <TableColumn prefWidth="73.0" text="Frequenza" />
         </columns>
       </TableView>
-      <Label layoutX="220.0" layoutY="23.0" text="Elelnco Canali" AnchorPane.topAnchor="20.0">
+      <Label layoutX="220.0" layoutY="23.0" text="Elenco Canali" AnchorPane.topAnchor="20.0">
          <font>
             <Font name="System Bold Italic" size="24.0" />
          </font>
