--- a/src/view/Palinsesto.fxml
+++ b/src/view/Palinsesto.fxml
@@ -8,20 +8,20 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <DatePicker fx:id="datePickerDataPalinsesto" layoutX="270.0" layoutY="21.0" AnchorPane.topAnchor="21.0" />
-      <Label layoutX="157.0" layoutY="25.0" text="DATA PALINSESTO " AnchorPane.topAnchor="25.0" />
+      <DatePicker fx:id="datePickerDataPalinsesto" layoutX="236.0" layoutY="21.0" AnchorPane.topAnchor="21.0" />
+      <Label layoutX="132.0" layoutY="25.0" text="DATA PALINSESTO " AnchorPane.topAnchor="25.0" />
       <Separator layoutX="20.0" layoutY="59.0" prefHeight="0.0" prefWidth="600.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
       <TableView layoutX="132.0" layoutY="77.0" prefHeight="301.0" prefWidth="337.0" AnchorPane.bottomAnchor="83.0" AnchorPane.leftAnchor="132.0" AnchorPane.rightAnchor="132.0" AnchorPane.topAnchor="77.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Canale" />
-            <TableColumn prefWidth="75.0" text="Programma" />
-          <TableColumn prefWidth="75.0" text="Puntata" />
+          <TableColumn prefWidth="69.0" text="Canale" />
+            <TableColumn prefWidth="88.0" text="Programma" />
+          <TableColumn prefWidth="68.0" text="Puntata" />
             <TableColumn prefWidth="110.0" text="Ora Trasmissione" />
         </columns>
       </TableView>
       <Button fx:id="buttonBack" layoutX="545.0" layoutY="422.0" mnemonicParsing="false" text="Back" />
-      <Button layoutX="444.0" layoutY="21.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" styleClass="background" stylesheets="@Theme.css" />
+      <Button layoutX="420.0" layoutY="21.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="41.0" styleClass="background" stylesheets="@Theme.css" text="Invia" />
    </children>
 </AnchorPane>
