--- a/src/view/MenuPrincipale.fxml
+++ b/src/view/MenuPrincipale.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
       <SplitPane dividerPositions="0.40257879656160456" layoutX="213.0" layoutY="141.0" prefHeight="500.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
@@ -50,12 +50,12 @@
                               <Font name="Times New Roman Bold Italic" size="40.0" />
                            </font>
                         </Label>
-                        <Button layoutX="102.0" layoutY="134.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="211.0" style="-fx-background-color: #1b6cd7; -fx-background-radius: 5em;" text="Gestione del contenuto" textFill="WHITE">
+                        <Button layoutX="102.0" layoutY="134.0" mnemonicParsing="false" onAction="#showManipolazioneContenuto" prefHeight="100.0" prefWidth="211.0" style="-fx-background-color: #1b6cd7; -fx-background-radius: 5em;" text="Gestione del contenuto" textFill="WHITE">
                            <font>
                               <Font size="13.0" />
                            </font>
                         </Button>
-                        <Button layoutX="102.0" layoutY="280.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="211.0" style="-fx-border-radius: 5em; -fx-border-color: #1b6cd7; -fx-background-color: #FFFFFF; -fx-border-width: 3;" text="Visualizzazione di Informazioni" textFill="#1b6cd7">
+                        <Button layoutX="102.0" layoutY="280.0" mnemonicParsing="false" onAction="#showVisualizzazione" prefHeight="100.0" prefWidth="211.0" style="-fx-border-radius: 5em; -fx-border-color: #1b6cd7; -fx-background-color: #FFFFFF; -fx-border-width: 3;" text="Visualizzazione di Informazioni" textFill="#1b6cd7">
                            <font>
                               <Font size="13.0" />
                            </font>
