--- a/src/view/FilmAcquistati.fxml
+++ b/src/view/FilmAcquistati.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
       <Label layoutX="154.0" layoutY="26.0" text="Ricerca per Canale" AnchorPane.topAnchor="26.0" />
       <Separator layoutX="20.0" layoutY="59.0" prefHeight="0.0" prefWidth="600.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
@@ -20,8 +20,8 @@
             <TableColumn prefWidth="64.0" text="Nr. Cast" />
          </columns>
       </TableView>
-      <Button fx:id="buttonBack" layoutX="545.0" layoutY="422.0" mnemonicParsing="false" text="Back" />
-      <Button layoutX="401.0" layoutY="22.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="41.0" styleClass="background" stylesheets="@Theme.css" text="Invia" />
+      <Button fx:id="buttonBack" layoutX="545.0" layoutY="422.0" mnemonicParsing="false" onAction="#showVisualizzazione" text="Back" />
+      <Button layoutX="401.0" layoutY="22.0" mnemonicParsing="false" onAction="#invioRicercaFilmAcquistati" prefHeight="25.0" prefWidth="41.0" styleClass="background" stylesheets="@Theme.css" text="Invia" />
       <TextField layoutX="252.0" layoutY="22.0" />
    </children>
 </AnchorPane>
