--- a/src/view/Programmi.fxml
+++ b/src/view/Programmi.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
       <TableView layoutX="68.0" layoutY="60.0" prefHeight="200.0" prefWidth="461.0" AnchorPane.leftAnchor="67.0" AnchorPane.rightAnchor="67.0" AnchorPane.topAnchor="60.0">
          <columns>
@@ -21,6 +21,6 @@
             <Font name="System Bold Italic" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="545.0" layoutY="311.0" mnemonicParsing="false" text="Back" />
+      <Button layoutX="545.0" layoutY="311.0" mnemonicParsing="false" onAction="#showVisualizzazione" text="Back" />
    </children>
 </AnchorPane>
