--- a/src/view/InsertAcquistoSerieTV.fxml
+++ b/src/view/InsertAcquistoSerieTV.fxml
@@ -2,28 +2,27 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity"  maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="205.0" prefWidth="442.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="205.0" prefWidth="442.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
-      <Label layoutX="14.0" layoutY="14.0" text="Serie TV" />
-      <ComboBox fx:id="comboBoxSerieTV" layoutX="71.0" layoutY="10.0" prefWidth="150.0" />
-      <Label layoutX="236.0" layoutY="14.0" text="Canale" />
-      <ComboBox fx:id="comboBoxCanale" layoutX="278.0" layoutY="10.0" prefWidth="150.0" />
+      <Label layoutX="14.0" layoutY="14.0" text="ID Serie TV" />
+      <Label layoutX="236.0" layoutY="14.0" text="ID Canale" />
       <Label layoutX="14.0" layoutY="55.0" text="Prezzo" />
-      <TextField fx:id="textFieldPrezzo" layoutX="72.0" layoutY="51.0" />
+      <TextField fx:id="prezz" layoutX="79.0" layoutY="51.0" />
       <Label layoutX="14.0" layoutY="96.0" text="Data Acquisto" />
-      <DatePicker fx:id="datePickerAcquisto" layoutX="104.0" layoutY="92.0" />
+      <DatePicker fx:id="dast" layoutX="104.0" layoutY="92.0" />
       <ButtonBar layoutX="163.0" layoutY="151.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" text="Inserisci " />
+            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciAcquistoSerieTv" text="Inserisci " />
             <Button fx:id="buttonModificaCanale" mnemonicParsing="false" text="Modifica" />
             <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
+      <TextField fx:id="idserie" layoutX="79.0" layoutY="10.0" />
+      <TextField fx:id="idcan" layoutX="296.0" layoutY="10.0" prefHeight="25.0" prefWidth="136.0" />
    </children>
 </AnchorPane>
