--- a/src/view/InsertFilm.fxml
+++ b/src/view/InsertFilm.fxml
@@ -2,34 +2,33 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="524.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="524.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="ID Film " />
-      <TextField fx:id="textFieldIDFilm" layoutX="55.0" layoutY="10.0" />
+      <TextField fx:id="idf" layoutX="55.0" layoutY="10.0" />
       <Label layoutX="268.0" layoutY="14.0" text="Casa discografica" />
-      <ComboBox fx:id="comboBoxCasaCinematografica" layoutX="363.0" layoutY="10.0" prefWidth="150.0" />
       <Label layoutX="14.0" layoutY="51.0" text="Nome" />
-      <TextField fx:id="textFieldNome" layoutX="55.0" layoutY="47.0" />
+      <TextField fx:id="nom" layoutX="55.0" layoutY="47.0" />
       <Label layoutX="14.0" layoutY="88.0" text="Data Creazione " />
-      <DatePicker fx:id="datePickerCreazione" layoutX="103.0" layoutY="84.0" prefHeight="25.0" prefWidth="149.0" />
+      <DatePicker fx:id="dc" layoutX="103.0" layoutY="84.0" prefHeight="25.0" prefWidth="149.0" />
       <Label layoutX="265.0" layoutY="88.0" text="Data Publicazione " />
-      <DatePicker fx:id="datePickerPubblicazione" layoutX="364.0" layoutY="84.0" prefHeight="25.0" prefWidth="149.0" />
+      <DatePicker fx:id="dp" layoutX="364.0" layoutY="84.0" prefHeight="25.0" prefWidth="149.0" />
       <Label layoutX="14.0" layoutY="129.0" text="Durata" />
-      <TextField fx:id="textFieldIDurata" layoutX="55.0" layoutY="125.0" />
+      <TextField fx:id="du" layoutX="55.0" layoutY="125.0" />
       <Label layoutX="324.0" layoutY="129.0" text="Lingua" />
-      <ComboBox fx:id="comboBoxLingua" layoutX="363.0" layoutY="125.0" prefWidth="150.0" />
       <ButtonBar layoutX="245.0" layoutY="190.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" text="Inserisci " />
-            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" text="Modifica" />
-            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" prefHeight="25.0" text="Cancella" />
+            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciFilm" text="Inserisci " />
+            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" onAction="#modificafilm" text="Modifica" />
+            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" onAction="#cancellafilm" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
+      <TextField fx:id="cd2" layoutX="364.0" layoutY="10.0" />
+      <TextField fx:id="li" layoutX="364.0" layoutY="125.0" />
    </children>
 </AnchorPane>
