--- a/src/view/InsertIncarico.fxml
+++ b/src/view/InsertIncarico.fxml
@@ -2,29 +2,28 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="213.0" prefWidth="494.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="213.0" prefWidth="494.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="ID Puntata" />
-      <TextField layoutX="78.0" layoutY="10.0" />
+      <TextField fx:id="idp" layoutX="78.0" layoutY="10.0" />
       <Label layoutX="247.0" layoutY="14.0" text="ID Programma" />
-      <TextField layoutX="331.0" layoutY="10.0" />
+      <TextField fx:id="idpr" layoutX="331.0" layoutY="10.0" />
       <Label layoutX="14.0" layoutY="50.0" text="Codice Fiscale" />
-      <TextField layoutX="92.0" layoutY="46.0" prefHeight="25.0" prefWidth="135.0" />
+      <TextField fx:id="cf2" layoutX="92.0" layoutY="46.0" prefHeight="25.0" prefWidth="135.0" />
       <Label layoutX="14.0" layoutY="83.0" text="Stipendio" />
-      <TextField layoutX="78.0" layoutY="79.0" />
-      <Label layoutX="247.0" layoutY="83.0" text="Ruolo" />
-      <ComboBox layoutX="286.0" layoutY="79.0" prefWidth="150.0" />
+      <TextField fx:id="s" layoutX="78.0" layoutY="79.0" />
+      <Label layoutX="270.0" layoutY="83.0" text="Ruolo" />
       <ButtonBar layoutX="215.0" layoutY="159.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" text="Inserisci " />
-            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" text="Modifica" />
-            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" prefHeight="25.0" text="Cancella" />
+            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciIncarico" text="Inserisci " />
+            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" onAction="#modificaincarico" text="Modifica" />
+            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" onAction="#cancellaincarico" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
+      <TextField fx:id="r" layoutX="331.0" layoutY="79.0" />
    </children>
 </AnchorPane>
