--- a/src/view/InsertPersona.fxml
+++ b/src/view/InsertPersona.fxml
@@ -6,25 +6,29 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity"  maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="226.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="226.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Codice Fiscale" />
-      <TextField fx:id="textFieldCF" layoutX="91.0" layoutY="10.0" />
+      <TextField fx:id="cf" layoutX="91.0" layoutY="10.0" />
       <Label layoutX="14.0" layoutY="48.0" text="Nome" />
-      <TextField fx:id="textFieldNome" layoutX="91.0" layoutY="44.0" />
+      <TextField fx:id="nome" layoutX="91.0" layoutY="44.0" />
       <Label layoutX="269.0" layoutY="48.0" text="Cognome" />
-      <TextField fx:id="textFieldCognome" layoutX="346.0" layoutY="44.0" />
+      <TextField fx:id="cognome" layoutX="346.0" layoutY="44.0" />
       <Label layoutX="14.0" layoutY="82.0" text="Indirizzo" />
-      <TextField fx:id="textFieldCivico" layoutX="247.0" layoutY="78.0" prefHeight="25.0" prefWidth="33.0" />
-      <TextField fx:id="textFieldVia" layoutX="91.0" layoutY="78.0" />
+      <TextField fx:id="civico" layoutX="247.0" layoutY="78.0" prefHeight="25.0" prefWidth="33.0" />
+      <TextField fx:id="via" layoutX="91.0" layoutY="78.0" />
       <Label layoutX="14.0" layoutY="117.0" text="Città" />
-      <TextField fx:id="textFieldCitta" layoutX="91.0" layoutY="113.0" />
+      <TextField fx:id="città" layoutX="91.0" layoutY="113.0" />
       <ButtonBar layoutX="230.0" layoutY="172.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" text="Inserisci " />
-            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" text="Modifica" />
-            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" prefHeight="25.0" text="Cancella" />
+            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciPersona" text="Inserisci " />
+            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" onAction="#modificapersona" text="Modifica" />
+            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" onAction="#cancellapersona" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
+      <Label layoutX="306.0" layoutY="117.0" text="Sesso" />
+      <TextField fx:id="sesso" layoutX="346.0" layoutY="113.0" prefHeight="25.0" prefWidth="33.0" />
+      <Label layoutX="254.0" layoutY="14.0" text="Data Di Nascita" />
+      <TextField fx:id="ddn" layoutX="346.0" layoutY="10.0" />
    </children>
 </AnchorPane>
