--- a/src/view/InsertProgramma.fxml
+++ b/src/view/InsertProgramma.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="178.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="178.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
       <Label layoutX="18.0" layoutY="24.0" text="ID Programma" />
       <Label layoutX="38.0" layoutY="57.0" text="Nome" />
@@ -16,9 +16,9 @@
       <TextField fx:id="textFieldTipologia" layoutX="324.0" layoutY="53.0" />
       <ButtonBar layoutX="208.0" layoutY="124.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" text="Inserisci " />
-            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" text="Modifica" />
-            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" prefHeight="25.0" text="Cancella" />
+            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciProgramma" text="Inserisci " />
+            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" onAction="#modificaprogramma" text="Modifica" />
+            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" onAction="#cancellaprogramma" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
    </children>
