--- a/src/view/Canali.fxml
+++ b/src/view/Canali.fxml
@@ -9,13 +9,13 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="365.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
-      <TableView layoutX="14.0" layoutY="55.0" prefHeight="200.0" prefWidth="466.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="60.0">
+      <TableView fx:id="tableViewCanali" layoutX="14.0" layoutY="101.0" prefHeight="200.0" prefWidth="466.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="101.0">
         <columns>
-          <TableColumn prefWidth="131.0" text="Nome" />
-          <TableColumn prefWidth="167.0" text="Amministratore Delegato" />
-            <TableColumn prefWidth="99.0" text="Numero Canale" />
-            <TableColumn prefWidth="101.0" text="Data Creazione" />
-            <TableColumn prefWidth="73.0" text="Frequenza" />
+          <TableColumn fx:id="channelColumn" prefWidth="131.0" text="Nome" />
+          <TableColumn fx:id="CFAmministratoreColumn" prefWidth="167.0" text="Amministratore Delegato" />
+            <TableColumn fx:id="NrCanaleColumn" prefWidth="99.0" text="Numero Canale" />
+            <TableColumn fx:id="dataCreazioneColumn" prefWidth="101.0" text="Data Creazione" />
+            <TableColumn fx:id="frequenzaColumn" prefWidth="73.0" text="Frequenza" />
         </columns>
       </TableView>
       <Label layoutX="220.0" layoutY="23.0" text="Elenco Canali" AnchorPane.topAnchor="20.0">
@@ -24,5 +24,6 @@
          </font>
       </Label>
       <Button layoutX="545.0" layoutY="326.0" mnemonicParsing="false" onAction="#showVisualizzazione" text="Back" />
+      <Button layoutX="262.0" layoutY="63.0" mnemonicParsing="false" onAction="#visualizzaCanali" text="Visualizza" />
    </children>
 </AnchorPane>
