--- a/src/view/SerieTVAcquistate.fxml
+++ b/src/view/SerieTVAcquistate.fxml
@@ -12,17 +12,17 @@
    <children>
       <Label layoutX="149.0" layoutY="26.0" text="Ricerca per Canale" AnchorPane.topAnchor="26.0" />
       <Separator layoutX="20.0" layoutY="59.0" prefHeight="0.0" prefWidth="600.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
-      <TableView layoutX="101.0" layoutY="71.0" prefHeight="301.0" prefWidth="399.0" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="70.0">
+      <TableView fx:id="tableViewSerieTV" layoutX="101.0" layoutY="71.0" prefHeight="301.0" prefWidth="399.0" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="70.0">
          <columns>
-            <TableColumn prefWidth="94.0" text="Nome Serie TV" />
-            <TableColumn prefWidth="121.0" text="Casa Discografica" />
-            <TableColumn prefWidth="68.0" text="Stagioni" />
-            <TableColumn prefWidth="58.0" text="Episodi" />
-            <TableColumn prefWidth="58.0" text="Nr. Cast" />
+            <TableColumn fx:id="nomeSerieColumn" prefWidth="94.0" text="Nome Serie TV" />
+            <TableColumn fx:id="nomeCasaCinematograficaColumn" prefWidth="121.0" text="Casa Discografica" />
+            <TableColumn fx:id="stagioniColumn" prefWidth="68.0" text="Stagioni" />
+            <TableColumn fx:id="episodiColumn" prefWidth="58.0" text="Episodi" />
+            <TableColumn fx:id="castSerieColumn" prefWidth="58.0" text="Nr. Cast" />
          </columns>
       </TableView>
       <Button fx:id="buttonBack" layoutX="545.0" layoutY="422.0" mnemonicParsing="false" onAction="#showVisualizzazione" text="Back" />
-      <Button layoutX="402.0" layoutY="22.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="41.0" styleClass="background" stylesheets="@Theme.css" text="Invia" />
-      <TextField layoutX="253.0" layoutY="22.0" />
+      <Button layoutX="402.0" layoutY="22.0" mnemonicParsing="false" onAction="#invioRicercaSerieTVAcquistati" prefHeight="25.0" prefWidth="41.0" styleClass="background" stylesheets="@Theme.css" text="Invia" />
+      <TextField fx:id="textFieldSerieAcquistate" layoutX="253.0" layoutY="22.0" />
    </children>
 </AnchorPane>
