--- a/src/view/PartecipazionePersona.fxml
+++ b/src/view/PartecipazionePersona.fxml
@@ -11,16 +11,16 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" layoutX="181.0" layoutY="120.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <Label layoutX="1.0" layoutY="14.0" text="Ricerca Persona" AnchorPane.leftAnchor="1.0" />
-                  <TextField layoutY="39.0" prefHeight="25.0" prefWidth="143.0" AnchorPane.leftAnchor="1.0" />
+                  <TextField fx:id="textFieldPersonaRuolo" layoutY="39.0" prefHeight="25.0" prefWidth="143.0" AnchorPane.leftAnchor="1.0" />
                   <Label layoutX="14.0" layoutY="182.0" text="INFO:" AnchorPane.leftAnchor="5.0" />
-                  <Button layoutX="146.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" styleClass="background" stylesheets="@Theme.css" AnchorPane.rightAnchor="1.0" />
+                  <Button layoutX="146.0" layoutY="39.0" mnemonicParsing="false" onAction="#ricercaPersonaRuolo" prefHeight="25.0" prefWidth="30.0" styleClass="background" stylesheets="@Theme.css" AnchorPane.rightAnchor="1.0" />
                   <GridPane layoutX="-27.0" layoutY="210.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -34,28 +34,28 @@
                      </rowConstraints>
                      <children>
                         <Label text="Nome" />
-                        <Label fx:id="textFieldNome" GridPane.columnIndex="1" />
+                        <Label fx:id="labelNomePersona" GridPane.columnIndex="1" />
                         <Label text="Cognome" GridPane.rowIndex="1" />
-                        <Label fx:id="textFieldCognome" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="labelCognomePersona" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <Label text="Data di nascita" GridPane.rowIndex="2" />
-                        <Label fx:id="textFieldNascita" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="labelNascitaPersona" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <Label text="Via" GridPane.rowIndex="3" />
-                        <Label fx:id="textFieldVia" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label fx:id="labelViaPersona" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                      </children>
                   </GridPane>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView layoutX="57.0" prefHeight="316.0" prefWidth="417.0" AnchorPane.bottomAnchor="82.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tableViewPersonaRuolo" layoutX="57.0" prefHeight="316.0" prefWidth="417.0" AnchorPane.bottomAnchor="82.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                      <TableColumn prefWidth="132.0" text="Programma" />
-                      <TableColumn prefWidth="119.0" text="Numero Puntata" />
-                        <TableColumn prefWidth="77.0" text="Data" />
-                        <TableColumn prefWidth="88.0" text="Ruolo" />
+                      <TableColumn fx:id="programmaRuoloColumn" prefWidth="132.0" text="Programma" />
+                      <TableColumn fx:id="nrPuntataColumn" prefWidth="119.0" text="Numero Puntata" />
+                        <TableColumn fx:id="stipendioColumn" prefWidth="77.0" text="Stipendio" />
+                        <TableColumn fx:id="ruoloColumn" prefWidth="88.0" text="Ruolo" />
                     </columns>
                   </TableView>
-                  <Button layoutX="362.0" layoutY="359.0" mnemonicParsing="false" text="Back" />
+                  <Button layoutX="362.0" layoutY="359.0" mnemonicParsing="false" onAction="#showVisualizzazione" text="Back" />
                </children>
             </AnchorPane>
         </items>
