--- a/src/view/FilmAcquistati.fxml
+++ b/src/view/FilmAcquistati.fxml
@@ -20,8 +20,8 @@
             <TableColumn fx:id="castColumn" prefWidth="64.0" text="Nr. Cast" />
          </columns>
       </TableView>
-      <Button fx:id="buttonBack" layoutX="545.0" layoutY="422.0" mnemonicParsing="false" onAction="#showVisualizzazione" text="Back" />
-      <Button layoutX="401.0" layoutY="22.0" mnemonicParsing="false" onAction="#invioRicercaFilmAcquistati" prefHeight="25.0" prefWidth="41.0" styleClass="background" stylesheets="@Theme.css" text="Invia" />
-      <TextField fx:id="textFieldFilmAcquistati" layoutX="252.0" layoutY="22.0" />
+      <Button layoutX="545.0" layoutY="422.0" mnemonicParsing="false" onAction="#showVisualizzazione" text="Back" />
+ 	  <TextField fx:id="textFieldFilmAcquistati" layoutX="252.0" layoutY="22.0" />
+      <Button layoutX="401.0" layoutY="22.0" mnemonicParsing="false" onAction="#invioRicercaFilmAcquistati" prefHeight="25.0" prefWidth="41.0" text="Invia" />
    </children>
 </AnchorPane>
