--- a/src/view/InsertAcquistoFilm.fxml
+++ b/src/view/InsertAcquistoFilm.fxml
@@ -17,9 +17,9 @@
       <DatePicker fx:id="da" layoutX="104.0" layoutY="92.0" />
       <ButtonBar layoutX="163.0" layoutY="151.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciAcquistoFilm" text="Inserisci " />
-            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" onAction="#modificaacquistofilm" text="Modifica" />
-            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" onAction="#cancellaacquistofilm" prefHeight="25.0" text="Cancella" />
+            <Button mnemonicParsing="false" onAction="#buttonInserisciAcquistoFilm" text="Inserisci " />
+            <Button mnemonicParsing="false" onAction="#modificaacquistofilm" text="Modifica" />
+            <Button minWidth="59.0" mnemonicParsing="false" onAction="#cancellaacquistofilm" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
       <TextField fx:id="film" layoutX="60.0" layoutY="10.0" />
