--- a/src/view/InsertAcquistoSerieTV.fxml
+++ b/src/view/InsertAcquistoSerieTV.fxml
@@ -14,12 +14,12 @@
       <Label layoutX="14.0" layoutY="55.0" text="Prezzo" />
       <TextField fx:id="prezz" layoutX="79.0" layoutY="51.0" />
       <Label layoutX="14.0" layoutY="96.0" text="Data Acquisto" />
-      <DatePicker fx:id="dast" layoutX="104.0" layoutY="92.0" />
+      <DatePicker layoutX="104.0" layoutY="92.0" />
       <ButtonBar layoutX="163.0" layoutY="151.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciAcquistoSerieTv" text="Inserisci " />
-            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" text="Modifica" />
-            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" prefHeight="25.0" text="Cancella" />
+            <Button mnemonicParsing="false" onAction="#buttonInserisciAcquistoSerieTv" text="Inserisci " />
+            <Button mnemonicParsing="false" text="Modifica" />
+            <Button minWidth="59.0" mnemonicParsing="false" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
       <TextField fx:id="idserie" layoutX="79.0" layoutY="10.0" />
