--- a/src/view/InsertIncarico.fxml
+++ b/src/view/InsertIncarico.fxml
@@ -19,9 +19,9 @@
       <Label layoutX="270.0" layoutY="83.0" text="Ruolo" />
       <ButtonBar layoutX="215.0" layoutY="159.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciIncarico" text="Inserisci " />
-            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" onAction="#modificaincarico" text="Modifica" />
-            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" onAction="#cancellaincarico" prefHeight="25.0" text="Cancella" />
+            <Button mnemonicParsing="false" onAction="#buttonInserisciIncarico" text="Inserisci " />
+            <Button mnemonicParsing="false" onAction="#modificaincarico" text="Modifica" />
+            <Button minWidth="59.0" mnemonicParsing="false" onAction="#cancellaincarico" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
       <TextField fx:id="r" layoutX="331.0" layoutY="79.0" />
