--- a/src/view/InsertPersona.fxml
+++ b/src/view/InsertPersona.fxml
@@ -21,9 +21,9 @@
       <TextField fx:id="città" layoutX="91.0" layoutY="113.0" />
       <ButtonBar layoutX="230.0" layoutY="172.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciPersona" text="Inserisci " />
-            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" onAction="#modificapersona" text="Modifica" />
-            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" onAction="#cancellapersona" prefHeight="25.0" text="Cancella" />
+            <Button mnemonicParsing="false" onAction="#buttonInserisciPersona" text="Inserisci " />
+            <Button mnemonicParsing="false" onAction="#modificapersona" text="Modifica" />
+            <Button minWidth="59.0" mnemonicParsing="false" onAction="#cancellapersona" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
       <Label layoutX="306.0" layoutY="117.0" text="Sesso" />
