--- a/src/view/InsertProgramma.fxml
+++ b/src/view/InsertProgramma.fxml
@@ -16,9 +16,9 @@
       <TextField fx:id="textFieldTipologia" layoutX="324.0" layoutY="53.0" />
       <ButtonBar layoutX="208.0" layoutY="124.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button fx:id="buttonInserisciCanale" mnemonicParsing="false" onAction="#buttonInserisciProgramma" text="Inserisci " />
-            <Button fx:id="buttonModificaCanale" mnemonicParsing="false" onAction="#modificaprogramma" text="Modifica" />
-            <Button fx:id="buttonCancellaCanale" minWidth="59.0" mnemonicParsing="false" onAction="#cancellaprogramma" prefHeight="25.0" text="Cancella" />
+            <Button mnemonicParsing="false" onAction="#buttonInserisciProgramma" text="Inserisci " />
+            <Button mnemonicParsing="false" onAction="#modificaprogramma" text="Modifica" />
+            <Button minWidth="59.0" mnemonicParsing="false" onAction="#cancellaprogramma" prefHeight="25.0" text="Cancella" />
          </buttons>
       </ButtonBar>
    </children>
