--- a/src/view/PartecipazionePersona.fxml
+++ b/src/view/PartecipazionePersona.fxml
@@ -20,7 +20,7 @@
                   <Label layoutX="1.0" layoutY="14.0" text="Ricerca Persona" AnchorPane.leftAnchor="1.0" />
                   <TextField fx:id="textFieldPersonaRuolo" layoutY="39.0" prefHeight="25.0" prefWidth="143.0" AnchorPane.leftAnchor="1.0" />
                   <Label layoutX="14.0" layoutY="182.0" text="INFO:" AnchorPane.leftAnchor="5.0" />
-                  <Button layoutX="146.0" layoutY="39.0" mnemonicParsing="false" onAction="#ricercaPersonaRuolo" prefHeight="25.0" prefWidth="30.0" styleClass="background" stylesheets="@Theme.css" AnchorPane.rightAnchor="1.0" />
+                  <Button layoutX="146.0" layoutY="39.0" mnemonicParsing="false" onAction="#ricercaPersonaRuolo" prefHeight="25.0" prefWidth="30.0" AnchorPane.rightAnchor="1.0" />
                   <GridPane layoutX="-27.0" layoutY="210.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
